track extent takes waypoints and route points into account